style/style.scss
@use "./lib/variables" as vars;
@use "./lib/animations" as anims;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  list-style-type: none;
  text-decoration: none;
  color: unset;
}

html {
  font-size: 16px;
  scroll-behavior: smooth;
  overflow-x: hidden;
  position: relative;
}

body {
  width: 100vw; 
  font-family: vars.$base-font;
  position: relative;
  background-color: vars.$background;
}

header {
  position: fixed;
  z-index: 999;
}

.special-word {
  font-family: vars.$second-font;
  color: vars.$rose;
  font-size: 3.8rem;
}

.double-text-container {
  height: 1.5rem;
  overflow: hidden;

  &:hover .double-text {
    transform: translateY(var(--scroll))
  }

  .double-text {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    transition: transform .3s;
  }
}

.future-rose:hover {
  color: vars.$rose; 

  .footer-element-arrow {
    background: vars.$rose; 
    transform: rotate(0deg)
  }
}

.future-violet:hover {
  color: vars.$violet; 

  .footer-element-arrow {
    background: vars.$violet; 
    transform: rotate(0deg)
  }
}

.future-orange:hover {
  color: vars.$orange; 

  .footer-element-arrow {
    background: vars.$orange; 
    transform: rotate(0deg)
  }
}

// Navbar
header {
  top: 20px;
  left: 5vw;
  width: 90vw;
  transition: .5s ease-in-out;
  transition-properties: width, top, left;
}

.header-active {
  width: 100vw;
  top: 0;
  left: 0;

  nav {
    border-radius: 0 !important;
  }
}

nav {
  display: flex;
  align-items: center;
  backdrop-filter: blur(5px);
  justify-content: start;
  padding: 10px 10vw;
  width: 100%;
  gap: 15vw;
  border-radius: 30px;
  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
  background: rgba($color: vars.$background, $alpha: .4);
  transition: .5s ease-in-out;
  transition-properties: border-radius ;
}

.onglet-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;

  .onglet {
    position: relative;

    &::after {
      content: "";
      position: absolute;
      bottom: -2px;
      left: 0;
      width: 0%;
      height: 2px;
      transition: width .3s ease-out;
    }


    &:hover::after {
      width: 80%;
    }
  }


  .rose::after {
    background: vars.$rose;
  }

  .orange::after {
    background: vars.$orange;
  }

  .contact {
    background: vars.$violet;
    padding: 10px 15px;
    border-radius: 20px;
    color: vars.$background;
    border: 2px solid transparent;
    transition: .3s ease-out;
    transition-properties: color, border-color, background;
    cursor: pointer;

    &:hover {
      border-color: vars.$violet;
      background: vars.$background;
      color: vars.$violet;

      a > svg {
        width: 20px;
        opacity: 1;
      }

    }

    a {
      display: flex;
      align-items: center;
      gap: 10px;

      svg {
        opacity: 0;
        width: 0;
        pointer-event: none;
        transition: width .3s ease-out;
      }
    }
  }
}

// Project Component
.project-component-container {
    width: 100%;
    max-width: 600px;
    padding: 10px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 10px;

  .image-container {
    width: 100%;
    height: 500px;
    position: relative;
    overflow: hidden;
    border-radius: 20px;

    &:hover {
      cursor: none;

      img {
        max-width: 110%;
      }

      .change-cursor {
        opacity: 1;
      }
    }
    img {
      position: absolute;
      min-height: 100%;
      min-width: 100%;
      max-width: 105%;
      width: auto;
      height: auto;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      transition: .3s ease-out;
      transition-properties: max-width;
    }

    .change-cursor {
      position: absolute;
      width: 200px;
      height: 200px;
      backdrop-filter: blur(5px);
      background: rgba($color: vars.$background, $alpha: .3);
      border: 2px solid vars.$background;
      border-radius: 100px;
      pointer-event: none;
      opacity: 0;
      transition: opacity .3s;
      transform: translate(-50%, -50%);

      &::after {
        content: "Voir plus";
        color: vars.$background;
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        text-shadow: vars.$black 1px 0 10px;
      }
    }
  }

  h3 {
    font-size: 1.7rem;
    font-weight: bolder;
    padding-left: 10px;
  }


  .project-categories-container {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    gap: 5px;
    padding-left: 10px;

    .project-categorie {
      border: 2px solid vars.$black;
      padding: 5px 10px;
      border-radius: 20px;
      transition: .3s;
      transition-properties: color, background;
      font-size: .7rem;
      cursor: pointer;

      &:hover {
        background: vars.$black;
        color: vars.$background;
      }
    }
  }

  p {
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;  
    overflow: hidden;
    padding-left: 10px;
    padding-right: 10px;
  }
}

// Section title 
.section-title{
  font-size: 3rem;
  display: flex;
  gap: 10px;
  font-weight: bolder;

  span {
    color: vars.$background;
    background: red;
    font-family: vars.$second-font;
    padding: 10px 20px;
    border-radius: 20px;
    display: flex;
    align-items: center;
  }
}

// Competences compontent
.competence-component {
  display: flex;
  flex-direction: column;
  gap: 10px;
  align-items: center;
  width: fit-content;
  transform: scale(1);
  transition: transform .3s;

  img {
    height: 80px;
    width: auto;
    opacity: .4;
    transition: opacity .4s;
  }

  p {
    opacity: 0;
    transition: opacity .4s;
  }

  &:hover {
    transform: scale(1.2);

    img {
      opacity: 1;
    }

    p {
      opacity: 1
    }
  }
};

// Diplomes 
.diplomes-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  padding-left: 20px;

  .diplome-container {
    width: 100%;
    position: relative;
    display: flex;
    flex-direction: column;
    padding: 20px 0;
    gap: 30px;
    overflow: hidden;
    transition: height .3s;


    &::after {
      content: "";
      position: absolute;
      bottom: 1px;
      left: 0;
      width: 100%;
      height: 1px;
      background: black;
    }

    .diplome-information {
      display: flex;
      align-items: center;
      justify-content: space-between;

      p {
        font-size: 1.8rem;
      }

      .active-arrow {
        width: 60px;
        height: 60px;
        background: red;
        border-radius: 50%;
        position: relative;
        transition: transform .3s;

        &::after {
          content: "";
          position: absolute;
          top: 55%;
          left: 25%;
          width: 30%;
          height: 1px;
          background: vars.$background;
          transform: rotate(45deg);
        }

        &::before {
          content: "";
          position: absolute;
          top: 55%;
          right: 25%;
          width: 30%;
          height: 1px;
          background: vars.$background;
          transform: rotate(-45deg);
        }
      }
    }

  }
}


// Reviews
.reviews-container {
  width: 100%;
  position: relative;
  height: 130%;

  ul {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    height: 100%;
  }

  .review-container {
    background: vars.$background;
    max-width: 700px;
    display: flex;
    flex-direction: column;
    gap: 30px;
    padding: 50px;
    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
    transition: scale .3s;
    position: sticky;
    top: calc(50vh - var(--height) / 2);
    border-radius: 30px;

    .review-user-information {
      display: flex;
      flex-direction: column;
      gap: 20px;
    }

    .review-user-information section {
      display: flex;
      align-items: center;
      gap: 10px;

      .image-container {
        width: 50px;
        height: 50px;
        border-radius: 50%;
        position: relative;
        overflow: hidden;

        .grey-bg {
          background: grey;
        }

        img {
          position: absolute;
          width: 80%;
          height: auto;
          top: 50%;
          left: 50%;
          transform: translate(-50%, -50%);
        }

      }
    }

    .user-job {
      font-size: .8rem;
    }
  }
}

// Footer 
footer {
  width: 100%;
  padding-top: 50px;
  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 40px;
  margin-top: 5vw;

  .auto-scroll-footer {
    @include anims.infiniteScrollRight(-80%, "footer-auto-scroll");

    & {
      width: auto;
      display: flex;
      align-items: flex-start;
      justify-content: flex-start;
      gap: 10px;
      animation: footer-auto-scroll 5s infinite linear;
    }


    &:hover {
      animation-play-state: paused;
    }

    a {
      font-size: 50px;
      display: flex;
      align-items: center;
      gap: 20px;
      white-space: nowrap;
      transition: color .3s;

      .footer-element-arrow {
        transform: rotate(-15deg);
        padding: 10px 16px;
        background: vars.$black;
        border-radius: 50%;
        color: white;
        transition: .3s;
        transition-properties: transform, background;
      }
    }
  }


  h2 {
    font-size: 12.5vw;
    color: transparent;
    -webkit-text-stroke: 1px vars.$black;
  }

  .footer-social-media {
    width: 100%;
    display: flex;
    align-items: center;
    gap: 20px;
    padding: 10px 20px;
    border-top: 1px solid vars.$black;

  }
}

.save-button {
  color: vars.$black;
  border-color: vars.$black;
  padding: 10px 15px;
  border-radius: 20px;
  transition: .3s ease-in-out;
  transition-property: scale, background, color;
  cursor: pointer;

  &:hover { 
    scale: 1.2; 
    background: vars.$black;
    color: vars.$background;
  }
}

.delete-button {
  border: 0;
  background: transparent;
  outline: 0;
  margin-top: -20px;
  font-size: 1rem;
}

textarea {
  font-size: 1rem;
  font-family: vars.$base-font;
  background: transparent;
  border: 1px solid vars.$black;
  border-radius: 10px;
  padding: 5px;
  height: 200px;
}

